modifying stage_ic and fetch code to ensure that both function compatibly

--- a/parm/fetch/ATM_cold.yaml.j2
+++ b/parm/fetch/ATM_cold.yaml.j2
@@ -8,4 +8,4 @@ untar:
         - {{ ftype }}.tile{{ ntile }}.nc
         {% endfor %} # ntile
         {% endfor %} # ftype
-    destination: "{{ DATA }}"
+    destination: "{{ DATAROOT }}"
