--- a/parm/fetch/ATM_cold.yaml.j2
+++ b/parm/fetch/ATM_cold.yaml.j2
@@ -1,12 +1,15 @@
-{% set cycle_YMDH = current_cycle | to_YMDH %}
+{% set cycle_YMD = current_cycle | to_YMD %}
+{% set cycle_HH = current_cycle | strftime("%H") %}
+{% set atm_dir = RUN + "." ~ cycle_YMD ~ "/" ~ cycle_HH ~ "/model/atmos/input" %}
 untar:
     tarball : "{{ FETCHDIR }}/{{ cycle_YMDH }}/atm_cold.tar"
     on_hpss: True
     contents:
-        - gfs_ctrl.nc
+        # ATM
+        - {{atm_dir}}/gfs_ctrl.nc
         {% for ftype in ["gfs_data", "sfc_data"] %}
         {% for ntile in range(1, ntiles + 1) %}
-        - {{ ftype }}.tile{{ ntile }}.nc
+        - {{atm_dir}}/{{ ftype }}.tile{{ ntile }}.nc
         {% endfor %} # ntile
         {% endfor %} # ftype
     destination: "{{ DATAROOT }}"
