--- a/parm/fetch/ATM_cold.yaml.j2
+++ b/parm/fetch/ATM_cold.yaml.j2
@@ -1,3 +1,4 @@
+{% set cycle_YMDH = current_cycle | to_YMDH %}
 {% set cycle_YMD = current_cycle | to_YMD %}
 {% set cycle_HH = current_cycle | strftime("%H") %}
 {% set atm_dir = RUN + "." ~ cycle_YMD ~ "/" ~ cycle_HH ~ "/model/atmos/input" %}
